kuber/substrat-labs-k8s/creation-cluster-kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pythonapp
  name: pythonapp
  namespace: applicatif
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pythonapp
    spec:
      containers:
      - image: registry.iutbeziers.fr/pythonapp:latest
        name: pythonapp
        ports:
        - containerPort: 5000
        resources: {}
status: {}
