kuber/substrat-labs-k8s/creation-cluster-kind/init-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-demo
  labels:
    app: my-label
spec:
  
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: workdir
      mountPath: /usr/share/nginx/html
  # These containers are run during pod initialization
  dnsPolicy: Default
  volumes:
  - name: workdir
    emptyDir: {}
