kuber/substrat-labs-k8s/creation-cluster-kind/mon-premier-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mon-premier-pod
spec:
  containers:
  - name: apache-container
    image: httpd
    resources:
      limits:
        cpu: "0.5" # Limite de CPU à 0,5 unité (par exemple, un demi-cœur)
        memory: "256Mi" # Limite de mémoire à 256 MiB
      requests:
        cpu: "0.2" # Demande de CPU à 0,2 unité
        memory: "128Mi" # Demande de mémoire à 128 MiB
  - name: busybox-container
    image: busybox
    command: ["sleep", "3600"]
