kuber/substrat-labs-k8s/creation-cluster-kind/mon-second-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mon-second-pod
spec:
  containers:
  - name: busybox-container
    image: busybox
    command: ["sleep", "3600"]
