kuber/substrat-labs-k8s/creation-cluster-kind/premiernod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mon-premier-pod
spec:
  containers:
  - name: nginx-container
    image: nginx
