kuber/substrat-labs-k8s/creation-cluster-kind/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
  labels:
    app: my-app  # Label qui sera utilisé pour associer le pod au service
spec:
  containers:
    - name: my-app-container
      image: nginx  # Remplacez par votre image Docker
      ports:
        - containerPort: 80  # Le port sur lequel le conteneur écoute
