kuber/substrat-labs-k8s/creation-cluster-kind/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
  
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
