kuber/substrat-labs-k8s/creation-cluster-kind/nginx-open.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: my-label  # Assurez-vous que le libellé correspond à votre déploiement NGINX
  ports:
  - protocol: TCP
    port: 80  # Le port du service
    targetPort: 80  # Le port sur lequel NGINX écoute dans le conteneur
