kuber/substrat-labs-k8s/creation-cluster-kind/nginx-serc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
