kuber/substrat-labs-k8s/creation-cluster-kind/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: my-label  # Sélectionnez les pods avec le label approprié
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
