kuber/substrat-labs-k8s/creation-cluster-kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-nginx
  name: hello-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-nginx
  type: LoadBalancer
status:
  loadBalancer: {}
