kuber/substrat-labs-k8s/creation-cluster-kind/deployjmp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp
  labels:
    app: pythonapp
  namespace: applicatif
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonapp
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      containers:
      - name: pythonapp
        image: registry.iutbeziers.fr/pythonapp:latest
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pythonapp
  labels:
    run: pythonapp
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "leastconn"
    haproxy.org/pod-maxconn: "50"
spec:
  selector:
    run: pythonapp
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: pythonapp.172.18.30.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pythonapp
            port:
              number: 80
