kuber/substrat-labs-k8s/creation-cluster-kind/ha.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: pythonapp.172.18.30.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pythonapp
            port:
              number: 80
