kuber/substrat-labs-k8s/creation-cluster-kind/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-test
spec:
  defaultBackend:
    service:
      name: haproxy-service
      port:
        number: 80
