kuber/substrat-labs-k8s/creation-cluster-kind/python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
spec:
  rules:
  - host: python.test.com  # Remplacez par le nom de domaine ou l'adresse que vous souhaitez utiliser
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 5000
